--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 <body>
     <!-- HEADER START-->
     <!-- HEADER END-->
-Miau
+
+    <!-- HERO START-->
+    <!-- HERO END-->
+
+    <!-- HERO START-->
+    <!-- HERO END-->
+
+    <!-- HERO START-->
+    <!-- HERO END-->
+
+    <!-- HERO START-->
+    <!-- HERO END-->
+
     <!-- FOOTER START-->
     <!-- FOOTER END-->
 </body>
