--- a/index.html
+++ b/index.html
@@ -13,14 +13,38 @@
     <!-- HERO START-->
     <!-- HERO END-->
 
-    <!-- HERO START-->
-    <!-- HERO END-->
+    <!-- COUNTER START-->
+    <!-- COUNTER END-->
 
-    <!-- HERO START-->
-    <!-- HERO END-->
+    <!-- COUNTDOWN CLOCK START-->
+    <!-- COUNTDOWN CLOCK END-->
 
-    <!-- HERO START-->
-    <!-- HERO END-->
+    <!-- CAROUSEL START-->
+    <!-- CAROUSEL END-->
+   
+    <!--  "ARMONIKA"  START-->
+    <!--  "ARMONIKA"  END-->
+
+    <!-- DOWNLOAD BUTTON  START-->
+    <!-- DOWNLOAD BUTTON  END-->
+    
+    <!-- SECTION  "COURSE BENEFIT"  START-->
+    <!-- SECTION  "COURSE BENEFIT"  END-->
+
+    <!-- SECTION  "PRICING"  START-->
+    <!-- SECTION  "PRICING"  END-->
+
+    <!-- SECTION  "KARUSELE - STUDENT REVIEWS"  START-->
+    <!-- SECTION  "KARUSELE - STUDENT REVIEWS"  END-->
+
+    <!-- BUTTON  START-->
+    <!-- BUTTON  END-->
+
+    <!-- FORM START-->
+    <!-- FORM END-->
+
+    <!-- SECTION  "COURSE INSTRUCTOR"  START-->
+    <!-- SECTION  "COURSE INSTRUCTOR"  END-->
 
     <!-- FOOTER START-->
     <!-- FOOTER END-->
