--- a/index.html
+++ b/index.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mitech portfolio</title>
+    <link rel="stylesheet" href="./css/custom-home.css">
 </head>
+
 <body>
-    <!-- HEADER START-->
-    <!-- HEADER END-->
+    <!-- HEADER START -->
+    <!-- HEADER END -->
 
-    <!-- HERO START-->
-    <!-- HERO END-->
+    <!-- HERO START -->
+    <!-- HERO END -->
 
-    <!-- COUNTER START-->
-    <!-- COUNTER END-->
+    <!-- CLIENTS START -->
+    <!-- CLIENTS END -->
 
-    <!-- COUNTDOWN CLOCK START-->
-    <!-- COUNTDOWN CLOCK END-->
+    <!-- SERVICES START -->
+    <!-- SERVICES END -->
 
-    <!-- CAROUSEL START-->
-    <!-- CAROUSEL END-->
-   
-    <!--  "ARMONIKA"  START-->
-    <!--  "ARMONIKA"  END-->
+    <!-- ABOUT COMPANY START -->
+    <!-- ABOUT COMPANY END -->
 
-    <!-- DOWNLOAD BUTTON  START-->
-    <!-- DOWNLOAD BUTTON  END-->
-    
-    <!-- SECTION  "COURSE BENEFIT"  START-->
-    <!-- SECTION  "COURSE BENEFIT"  END-->
+    <!-- HIRE US START -->
+    <!-- HIRE US END -->
 
-    <!-- SECTION  "PRICING"  START-->
-    <!-- SECTION  "PRICING"  END-->
+    <!-- ACHIEVEMENTS START -->
+    <!-- ACHIEVEMENTS END -->
 
-    <!-- SECTION  "KARUSELE - STUDENT REVIEWS"  START-->
-    <!-- SECTION  "KARUSELE - STUDENT REVIEWS"  END-->
+    <!-- PROMO VIDEO START -->
+    <!-- PROMO VIDEO END -->
 
-    <!-- BUTTON  START-->
-    <!-- BUTTON  END-->
+    <!-- CASE STUDIES START -->
+    <!-- CASE STUDIES END -->
 
-    <!-- FORM START-->
-    <!-- FORM END-->
+    <!-- TESTIMONIALS START -->
+    <!-- TESTIMONIALS END -->
 
-    <!-- SECTION  "COURSE INSTRUCTOR"  START-->
-    <!-- SECTION  "COURSE INSTRUCTOR"  END-->
+    <!-- BLOG START -->
+    <!-- BLOG END -->
 
-    <!-- FOOTER START-->
-    <!-- FOOTER END-->
+    <!-- CONTACTS START -->
+    <!-- CONTACTS END -->
+
+    <!-- FOOTER START -->
+    <!-- FOOTER END -->
 </body>
+
 </html>
