Responsive columns and margin-left

--- a/index.html
+++ b/index.html
@@ -11,42 +11,128 @@
 
 <body>
     <!-- HEADER START -->
+    <div class="container">
+        <div class="row">
+            <p class="col-12 col-sm-6 col-md-4 col-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate delectus dolorum soluta quos deleniti accusantium illo minus tenetur. Dolorum dicta a at iure recusandae obcaecati velit voluptates quia corporis molestiae odio suscipit non placeat eveniet vel molestias mollitia perferendis quam quasi culpa explicabo nemo, atque repellendus. Ratione vitae repudiandae eligendi.</p>
+            <p class="col-12 col-sm-6 col-md-4 ml-md-4 col-lg-5 ml-lg-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate delectus dolorum soluta quos deleniti accusantium illo minus tenetur. Dolorum dicta a at iure recusandae obcaecati velit voluptates quia corporis molestiae odio suscipit non placeat eveniet vel molestias mollitia perferendis quam quasi culpa explicabo nemo, atque repellendus. Ratione vitae repudiandae eligendi.</p>
+        </div>
+        <div class="row">
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+            <p class="col-1">asd</p>
+        </div>
+        <div class="row">
+            <p class="col-1 ml-1 ml-sm-2 ml-md-3 ml-lg-4 ml-xl-5 ml-xxl-6">asd</p>
+        </div>
+        <div class="row">
+            <p class="col-1 ml-7 ml-sm-8 ml-md-9 ml-lg-10 ml-xl-11">asd</p>
+        </div>
+    </div>
     <!-- HEADER END -->
 
     <!-- HERO START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- HERO END -->
 
     <!-- CLIENTS START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- CLIENTS END -->
 
     <!-- SERVICES START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- SERVICES END -->
 
     <!-- ABOUT COMPANY START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- ABOUT COMPANY END -->
 
     <!-- HIRE US START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- HIRE US END -->
 
     <!-- ACHIEVEMENTS START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- ACHIEVEMENTS END -->
 
     <!-- PROMO VIDEO START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- PROMO VIDEO END -->
 
     <!-- CASE STUDIES START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- CASE STUDIES END -->
 
     <!-- TESTIMONIALS START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- TESTIMONIALS END -->
 
     <!-- BLOG START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- BLOG END -->
 
     <!-- CONTACTS START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- CONTACTS END -->
 
     <!-- FOOTER START -->
+    <div class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <!-- FOOTER END -->
 </body>
 
