Fluid layout, visible hidden classes, fixed width row

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- HEADER START -->
     <div class="container">
         <div class="row">
-            <p class="col-12 col-sm-6 col-md-4 col-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate delectus dolorum soluta quos deleniti accusantium illo minus tenetur. Dolorum dicta a at iure recusandae obcaecati velit voluptates quia corporis molestiae odio suscipit non placeat eveniet vel molestias mollitia perferendis quam quasi culpa explicabo nemo, atque repellendus. Ratione vitae repudiandae eligendi.</p>
-            <p class="col-12 col-sm-6 col-md-4 ml-md-4 col-lg-5 ml-lg-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate delectus dolorum soluta quos deleniti accusantium illo minus tenetur. Dolorum dicta a at iure recusandae obcaecati velit voluptates quia corporis molestiae odio suscipit non placeat eveniet vel molestias mollitia perferendis quam quasi culpa explicabo nemo, atque repellendus. Ratione vitae repudiandae eligendi.</p>
+            <p class="hidden-sm visible-md hidden-lg visible-xl hidden-xxl col-12 col-sm-6 col-md-4 col-lg-5">LABAS</p>
+            <p class="hidden visible-sm hidden-md visible-lg hidden-xl visible-xxl col-12 col-sm-6 col-md-4 ml-md-4 col-lg-5 ml-lg-2">RYTAS</p>
         </div>
         <div class="row">
             <p class="col-1">asd</p>
