--- a/index.html
+++ b/index.html
@@ -11,38 +11,22 @@
 
 <body>
     <!-- HEADER START -->
-    <div class="container">
+    <header class="container">
         <div class="row">
-            <p class="hidden-sm visible-md hidden-lg visible-xl hidden-xxl col-12 col-sm-6 col-md-4 col-lg-5">LABAS</p>
-            <p class="hidden visible-sm hidden-md visible-lg hidden-xl visible-xxl col-12 col-sm-6 col-md-4 ml-md-4 col-lg-5 ml-lg-2">RYTAS</p>
+            TOP-TEXT + LOGO + NAV + LANG + SEARCH
         </div>
-        <div class="row">
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-            <p class="col-1">asd</p>
-        </div>
-        <div class="row">
-            <p class="col-1 ml-1 ml-sm-2 ml-md-3 ml-lg-4 ml-xl-5 ml-xxl-6">asd</p>
-        </div>
-        <div class="row">
-            <p class="col-1 ml-7 ml-sm-8 ml-md-9 ml-lg-10 ml-xl-11">asd</p>
-        </div>
-    </div>
+    </header>
     <!-- HEADER END -->
 
     <!-- HERO START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-md-6 col-lg-5">
+                TEXTS
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 ml-lg-1">
+                IMG
+            </div>
         </div>
     </div>
     <!-- HERO END -->
@@ -50,7 +34,9 @@
     <!-- CLIENTS START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12">
+                CLIENTS
+            </div>
         </div>
     </div>
     <!-- CLIENTS END -->
@@ -58,7 +44,25 @@
     <!-- SERVICES START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
+                OUR SERVICES + For your very specific industry, we have highly-tailored IT solutions.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4">
+                SERVICE ITEM 1
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                SERVICE ITEM 2
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                SERVICE ITEM 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                Challenges are just opportunities in disguise. Take the challenge!
+            </div>
         </div>
     </div>
     <!-- SERVICES END -->
@@ -66,7 +70,12 @@
     <!-- ABOUT COMPANY START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-md-6 col-lg-5">
+                OUR COMPANY
+            </div>
+            <div class="col-12 col-md-6 col-lg-5 ml-lg-2">
+                1-2-3 QUESTIONS
+            </div>
         </div>
     </div>
     <!-- ABOUT COMPANY END -->
@@ -74,7 +83,25 @@
     <!-- HIRE US START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
+                HIRE US, WHY NOT?
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4">
+                HIRE ITEM 1
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                HIRE ITEM 2
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                HIRE ITEM 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                Learn more about how we work span
+            </div>
         </div>
     </div>
     <!-- HIRE US END -->
@@ -82,7 +109,18 @@
     <!-- ACHIEVEMENTS START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-md-6 col-lg-3">
+                ACHIEVEMENT 1
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                ACHIEVEMENT 2
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                ACHIEVEMENT 3
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                ACHIEVEMENT 4
+            </div>
         </div>
     </div>
     <!-- ACHIEVEMENTS END -->
@@ -90,7 +128,9 @@
     <!-- PROMO VIDEO START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-sm-8 ml-sm-2 col-lg-6 ml-lg-6">
+                PROMO VIDEO
+            </div>
         </div>
     </div>
     <!-- PROMO VIDEO END -->
@@ -98,7 +138,17 @@
     <!-- CASE STUDIES START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
+                CASE STUDIES
+            </div>
+        </div>
+        <div class="row">
+            CAROUSEL + CASE STUDIES ITEMS
+        </div>
+        <div class="row">
+            <div class="col-12">
+                Challenges are just opportunities in disguise. Take the challenge!
+            </div>
         </div>
     </div>
     <!-- CASE STUDIES END -->
@@ -106,7 +156,12 @@
     <!-- TESTIMONIALS START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
+                TESTIMONIALS
+            </div>
+        </div>
+        <div class="row">
+            CAROUSEL + TESTIMONIALS
         </div>
     </div>
     <!-- TESTIMONIALS END -->
@@ -114,7 +169,15 @@
     <!-- BLOG START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-lg-4">
+                BLOG AND NEWS
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                BLOG ARTICLE 1
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                BLOG ARTICLE 2
+            </div>
         </div>
     </div>
     <!-- BLOG END -->
@@ -122,7 +185,12 @@
     <!-- CONTACTS START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-lg-5">
+                Obtaining further information by make a contact with our experienced IT staffs.
+            </div>
+            <div class="col-12 col-lg-6 ml-lg-1">
+                REACH OUT NOW!
+            </div>
         </div>
     </div>
     <!-- CONTACTS END -->
@@ -130,7 +198,29 @@
     <!-- FOOTER START -->
     <div class="container">
         <div class="row">
-            CONTENT
+            <div class="col-12 col-sm-6 col-xl-4">
+                LOGO + CONTACTS
+            </div>
+            <div class="col-12 col-sm-6 col-xl-2">
+                IT Services
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-2">
+                Quick links
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-2">
+                Support
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-2">
+                APP STORE
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                © 2019 Mitech. All Rights Reserved.
+            </div>
+            <div class="col-12 col-md-6">
+                SOCIALS
+            </div>
         </div>
     </div>
     <!-- FOOTER END -->
