button, base colors

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <!-- HEADER END -->
 
     <!-- HERO START -->
-    <div class="container">
+    <div class="container bg-creame">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-5">
                 TEXTS
+                <div class="btn">Get details</div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 ml-lg-1">
                 IMG
@@ -42,7 +43,7 @@
     <!-- CLIENTS END -->
 
     <!-- SERVICES START -->
-    <div class="container">
+    <div class="container bg-grey">
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
                 OUR SERVICES + For your very specific industry, we have highly-tailored IT solutions.
@@ -77,11 +78,6 @@
                 1-2-3 QUESTIONS
             </div>
         </div>
-    </div>
-    <!-- ABOUT COMPANY END -->
-
-    <!-- HIRE US START -->
-    <div class="container">
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
                 HIRE US, WHY NOT?
@@ -126,7 +122,7 @@
     <!-- ACHIEVEMENTS END -->
 
     <!-- PROMO VIDEO START -->
-    <div class="container">
+    <div class="container bg-grey">
         <div class="row">
             <div class="col-12 col-sm-8 ml-sm-2 col-lg-6 ml-lg-6">
                 PROMO VIDEO
@@ -154,7 +150,7 @@
     <!-- CASE STUDIES END -->
 
     <!-- TESTIMONIALS START -->
-    <div class="container">
+    <div class="container bg-creame">
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
                 TESTIMONIALS
@@ -183,7 +179,7 @@
     <!-- BLOG END -->
 
     <!-- CONTACTS START -->
-    <div class="container">
+    <div class="container bg-blue-light">
         <div class="row">
             <div class="col-12 col-lg-5">
                 Obtaining further information by make a contact with our experienced IT staffs.
@@ -196,7 +192,7 @@
     <!-- CONTACTS END -->
 
     <!-- FOOTER START -->
-    <div class="container">
+    <div class="container bg-grey">
         <div class="row">
             <div class="col-12 col-sm-6 col-xl-4">
                 LOGO + CONTACTS
