--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-12 col-md-6 col-lg-5">
                 TEXTS
-                <div class="btn">Get details</div>
+                <div class="btn btn-white">Get details</div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 ml-lg-1">
                 IMG
@@ -46,7 +46,8 @@
     <div class="container bg-grey">
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
-                OUR SERVICES + For your very specific industry, we have highly-tailored IT solutions.
+                <h2 class="title center"> OUR SERVICES </h2>
+                <h3 class="subtitle center"> For your very specific industry, we have highly-tailored IT solutions.</h3>
             </div>
         </div>
         <div class="row">
@@ -61,9 +62,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
-                Challenges are just opportunities in disguise. Take the challenge!
-            </div>
+            <p class="col-12 botton-text-link "> Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a>
+            </p>
         </div>
     </div>
     <!-- SERVICES END -->
@@ -186,6 +186,7 @@
             </div>
             <div class="col-12 col-lg-6 ml-lg-1">
                 REACH OUT NOW!
+                <div class="btn">Contact us</div>
             </div>
         </div>
     </div>
