--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="row">
             <div class="col-12 col-md-6 col-lg-5">
                 TEXTS
-                <div class="btn btn-white">Get details</div>
+                <!-- <div class="btn">Get details</div> -->
+                <div class="btn btn-hover-blue">blue-blue</div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 ml-lg-1">
                 IMG
@@ -33,7 +34,7 @@
     <!-- HERO END -->
 
     <!-- CLIENTS START -->
-    <div class="container">
+    <div class="container client">
         <div class="row">
             <div class="col-12">
                 CLIENTS
@@ -45,9 +46,9 @@
     <!-- SERVICES START -->
     <div class="container bg-grey">
         <div class="row">
-            <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
-                <h2 class="title center"> OUR SERVICES </h2>
-                <h3 class="subtitle center"> For your very specific industry, we have highly-tailored IT solutions.</h3>
+            <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2 center">
+                <h2 class="title">Our services</h2>
+                <h3 class="subtitle">For your very specific industry, we have <span class="selected">highly-tailored IT solutions.</span></h3>
             </div>
         </div>
         <div class="row">
@@ -62,8 +63,7 @@
             </div>
         </div>
         <div class="row">
-            <p class="col-12 botton-text-link "> Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a>
-            </p>
+            <p class="col-12 bottom-text-link">Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a></p>
         </div>
     </div>
     <!-- SERVICES END -->
@@ -72,7 +72,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-5">
-                OUR COMPANY
+                <h2 class="title">Our company</h2>
+                <h3 class="subtitle">We’ve been thriving in <span class="selected">38 years</span></h3>
             </div>
             <div class="col-12 col-md-6 col-lg-5 ml-lg-2">
                 1-2-3 QUESTIONS
@@ -80,24 +81,28 @@
         </div>
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
-                HIRE US, WHY NOT?
+                <h2 class="title">Hire us, why not?</h2>
+                <h3 class="subtitle">How we claim to <span class="selected">excel?</span></h3>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4">
                 HIRE ITEM 1
+                <div class="btn btn-white btn-hover-white">Learn more</div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 HIRE ITEM 2
+                <div class="btn btn-white btn-hover-white">Learn more</div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 HIRE ITEM 3
+                <div class="btn btn-white btn-hover-white">Learn more</div>
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
-                Learn more about how we work span
-            </div>
+            <p class="col-12 bottom-text-link">
+                <a href="#">Learn more about how we work <i class="fa fa-bath" aria-hidden="true"></i></a>
+            </p>
         </div>
     </div>
     <!-- HIRE US END -->
@@ -125,6 +130,7 @@
     <div class="container bg-grey">
         <div class="row">
             <div class="col-12 col-sm-8 ml-sm-2 col-lg-6 ml-lg-6">
+                <h2 class="title">Share the joy of achieving glorious moments &amp; climbing up the top.</h2>
                 PROMO VIDEO
             </div>
         </div>
@@ -135,16 +141,15 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
-                CASE STUDIES
+                <h2 class="title">Case studies</h2>
+                <h3 class="subtitle">Proud projects that <span class="selected">make us stand out</span></h3>
             </div>
         </div>
         <div class="row">
             CAROUSEL + CASE STUDIES ITEMS
         </div>
         <div class="row">
-            <div class="col-12">
-                Challenges are just opportunities in disguise. Take the challenge!
-            </div>
+            <p class="col-12 bottom-text-link">Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a></p>
         </div>
     </div>
     <!-- CASE STUDIES END -->
@@ -153,7 +158,8 @@
     <div class="container bg-creame">
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2">
-                TESTIMONIALS
+                <h2 class="title">Testimonials</h2>
+                <h3 class="subtitle">Why do people praise about <span class="selected">Mitech?</span></h3>
             </div>
         </div>
         <div class="row">
@@ -166,7 +172,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4">
-                BLOG AND NEWS
+                <h2 class="title">Blogs &amp; news</h2>
+                <h3 class="subtitle">Interesting articles <span class="selected">updated daily</span></h3>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 BLOG ARTICLE 1
@@ -179,14 +186,14 @@
     <!-- BLOG END -->
 
     <!-- CONTACTS START -->
-    <div class="container bg-blue-light">
+    <div class="container contact-us bg-blue-light">
         <div class="row">
             <div class="col-12 col-lg-5">
-                Obtaining further information by make a contact with our experienced IT staffs.
+                <h3 class="subtitle">Obtaining further information by <span class="selected">make a contact</span> with our experienced IT staffs.</h3>
             </div>
             <div class="col-12 col-lg-6 ml-lg-1">
                 REACH OUT NOW!
-                <div class="btn">Contact us</div>
+                <div class="btn btn-creame btn-hover-blue">Contact us</div>
             </div>
         </div>
     </div>
