service html updates

--- a/index.html
+++ b/index.html
@@ -52,14 +52,24 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-4">
-                SERVICE ITEM 1
+            <div class="col-12 col-md-6 col-lg-4 service-item">
+                <img src="img/services/mitech-box-image-style-01-image-01-100x108.png"> </img>
+                <h4>IT Design</h4>
+                <p>We provide the most responsive and functional IT design for companies and businesses worldwide.</p>
+                <a href="#"> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                SERVICE ITEM 2
+            <div class="col-12 col-md-6 col-lg-4 service-item">
+                <img src="img/services/mitech-box-image-style-01-image-02-100x108.png"> </img>
+                <h4>IT Management</h4>
+                <p>It’s possible to simultaneously manage and transform information from one server to another.</p>
+                <a href="#"> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                SERVICE ITEM 3
+            <div class="col-12 col-md-6 col-lg-4 service-item ">
+                <img src="img/services/mitech-box-image-style-01-image-03-100x108.png"> </img>
+
+                <h4>Data Security</h4>
+                <p>Back up your database, store in a safe and secure place while still maintaining its accessibility.</p>
+                <a href="#"> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
             </div>
         </div>
         <div class="row">
@@ -228,6 +238,7 @@
         </div>
     </div>
     <!-- FOOTER END -->
+    <script src="./js/data/servicesData.js"></script>
 </body>
 
 </html>
