--- a/index.html
+++ b/index.html
@@ -44,33 +44,20 @@
     <!-- CLIENTS END -->
 
     <!-- SERVICES START -->
-    <div class="container bg-grey">
+    <div class="container bg-grey services">
         <div class="row">
             <div class="col-12 col-lg-10 ml-lg-1 col-xl-8 ml-xl-2 center">
                 <h2 class="title">Our services</h2>
                 <h3 class="subtitle">For your very specific industry, we have <span class="selected">highly-tailored IT solutions.</span></h3>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 service-item">
-                <img src="img/services/mitech-box-image-style-01-image-01-100x108.png"> </img>
-                <h4>IT Design</h4>
+        <div id="services_block" class="row">
+            <!-- <div class="col-12 col-md-6 col-lg-4 service-item">
+                <img src="./img/services/mitech-box-image-style-01-image-01-100x108.png" alt="">
+                <h4>IT design</h4>
                 <p>We provide the most responsive and functional IT design for companies and businesses worldwide.</p>
-                <a href="#"> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 service-item">
-                <img src="img/services/mitech-box-image-style-01-image-02-100x108.png"> </img>
-                <h4>IT Management</h4>
-                <p>It’s possible to simultaneously manage and transform information from one server to another.</p>
-                <a href="#"> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 service-item ">
-                <img src="img/services/mitech-box-image-style-01-image-03-100x108.png"> </img>
-
-                <h4>Data Security</h4>
-                <p>Back up your database, store in a safe and secure place while still maintaining its accessibility.</p>
-                <a href="#"> <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </a>
-            </div>
+                <a href="#" class="fa fa-long-arrow-right"></a>
+            </div> -->
         </div>
         <div class="row">
             <p class="col-12 bottom-text-link">Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a></p>
@@ -111,7 +98,7 @@
         </div>
         <div class="row">
             <p class="col-12 bottom-text-link">
-                <a href="#">Learn more about how we work <i class="fa fa-bath" aria-hidden="true"></i></a>
+                <a href="#">Learn more about how we work <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </p>
         </div>
     </div>
@@ -238,7 +225,8 @@
         </div>
     </div>
     <!-- FOOTER END -->
-    <script src="./js/data/servicesData.js"></script>
+
+    <script src="./js/mainHome.js" type="module" defer></script>
 </body>
 
 </html>
