servives update style

--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
                 <h3 class="subtitle">For your very specific industry, we have <span class="selected">highly-tailored IT solutions.</span></h3>
             </div>
         </div>
-        <div id="services_block" class="row">
-            <!-- <div class="col-12 col-md-6 col-lg-4 service-item">
-                <img src="./img/services/mitech-box-image-style-01-image-01-100x108.png" alt="">
-                <h4>IT design</h4>
-                <p>We provide the most responsive and functional IT design for companies and businesses worldwide.</p>
-                <a href="#" class="fa fa-long-arrow-right"></a>
-            </div> -->
+        <div class="row">
+            <div id="services_block" class="col-12 services-list">
+                <!-- <div class="service-item">
+                    <img src="./img/services/mitech-box-image-style-01-image-01-100x108.png" alt="">
+                    <h4>IT design</h4>
+                    <p>We provide the most responsive and functional IT design for companies and businesses worldwide.</p>
+                    <a href="#" class="fa fa-long-arrow-right"></a>
+                </div> -->
+            </div>
         </div>
         <div class="row">
             <p class="col-12 bottom-text-link">Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a></p>
