--- a/index.html
+++ b/index.html
@@ -110,17 +110,8 @@
     <!-- ACHIEVEMENTS START -->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-3">
-                ACHIEVEMENT 1
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                ACHIEVEMENT 2
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                ACHIEVEMENT 3
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                ACHIEVEMENT 4
+            <div id="achievements_block" class="col-12">
+                ACHIEVEMENTS CONTENT
             </div>
         </div>
     </div>
