--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <!-- ACHIEVEMENTS START -->
     <div class="container">
         <div class="row">
-            <div id="achievements_block" class="col-12">
-                ACHIEVEMENTS CONTENT
+            <div id="achievements_block" class="col-12 achievements-list">
+                ACHIEVEMENT CONTENT
             </div>
         </div>
     </div>
