--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- HERO START -->
     <div class="container bg-creame">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-5">
+            <div id="demo" class="col-12 col-md-6 col-lg-5">
                 TEXTS
                 <!-- <div class="btn">Get details</div> -->
                 <div class="btn btn-hover-blue">blue-blue</div>
